# ChatMPI

./: .gitignore  CLIENTINFO  CLIENTINFO.sqbpro  CMakeLists.txt
Client/: CMakeLists.txt  dialog.cpp  dialog.h  resouces.qrc  test_cli.cpp
Client/lib/xtea3/: xtea3.h
Client/qml/: ContactPage.qml  ConversationPage.qml  LogPage.qml  main.qml  qml.qrc
Client/src/: 123  ClientDTO.h  cripto.h  dialog.cpp  logmodel.cpp  logmodel.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  meswait.cpp  sqlcontactmodel.cpp  sqlcontactmodel.h  sqlconversationmodel.cpp  sqlconversationmodel.h  threadsqueue.hpp
Encryp_lib/: CMakeLists.txt
Encryp_lib/src/: xtea3.cpp
Engine/src/: engine.h
FOR_TERMUX/: CMakeLists.txt  cripto.cpp  cripto.h  main.cpp
Server/: .gitignore  CLIENTINFO  CMakeLists.txt  main  main.cpp
Server/Database/: CMakeLists.txt
Server/Database/src/: database.cpp  database.h  databasecontroller.cpp  databasecontroller.h
Server/Engine/: CMakeLists.txt  ClientDTO.h
Server/Engine/src/: ClientDTO.h  engine.cpp  engine.h
Server/main.dSYM/Contents/Resources/DWARF/: main
Server/main.dSYM/Contents/Resources/Relocations/aarch64/: main.yml
database/: CMakeLists.txt
database/src/: database.h  databasecontroller.cpp  databasecontroller.h
